[package]
name = "falcon-mos6502"
version = "0.0.2"
authors = [ "Alex Eubanks <endeavor@rainbowsandpwnies.com>" ]
repository = "https://github.com/falconre/falcon-mos6502"
description = "Instruction decoding for MOS 6502"
license = "Apache-2.0"
readme = "README.md"

[lib]
name = "falcon_mos6502"
path = "lib/lib.rs"

[[bin]]
name = "falcon-mos6502-example"
path = "example/main.rs"